TEST_PROGRAMS/INVALID/cheuk_siow/invalid5.min
# Invalid program 5: parenthesis with empty expression.

print (1.2 + 3.4) * () / (4.3 - 2.1);

